Fix Burger Menu Not Showing
and fix the side nav not closing on preferences and admin

--- a/packages/rocketchat-theme/client/imports/general/forms.css
+++ b/packages/rocketchat-theme/client/imports/general/forms.css
@@ -856,6 +856,10 @@
 		align-items: center;
 	}
 
+	& h2 {
+		margin-left: 45px;
+	}
+
 	&__content {
 		overflow-y: auto;
 
